# HyperAgent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT_PLAN.md  README.md  backend_launcher.py  build-portable.bat  main.cjs  main.py  package-lock.json  pyproject.toml
.claude/: settings.json
app/: config.py  main.py
app/agent/: graph.py  prompts.py  tools.py
app/api/: chat.py  memory.py  reminder.py  schedule.py  settings.py  thread.py
app/calculator/: calc.py
app/email/: __init__.py  client.py
app/file_parser/: __init__.py  parser.py
app/github/: __init__.py  client.py
app/memory/: __init__.py  checkpointer.py  context.py  embeddings.py  models.py  reindex.py  repository.py  store.py
app/notion/: __init__.py  client.py
app/reminder/: models.py  notifier.py  repository.py  scheduler.py
app/schedule/: database.py  models.py  notifier.py  repository.py
electron/: main.cjs  main.js  preload.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: generate_icons.py
tests/: conftest.py  test_agent_stream.py  test_chat_api.py  test_checkpointer_lifecycle.py  test_email_tools.py  test_file_parser.py  test_github_tools.py  test_memory_context.py  test_memory_reindex.py  test_memory_repository.py  test_memory_store.py  test_notion_tools.py  test_prompts.py  test_reminder_repository.py  test_reminder_tools.py  test_schedule_api.py  test_schedule_repository.py  test_scheduler.py  test_settings.py  test_thread_api.py  test_thread_repository.py  test_tools.py  test_weather_client.py  test_web_search.py
(+21 files in other folders)
